portrait/examples/engraver-demo/rejected/RequireCrossCallVault.portrait
// RequireCrossCallVault — REJECT fixture (out of subset, EMBEDDED in a require).
// Solidity equivalent:
//   contract RequireCrossCallVault {
//     function drain(address strategy, uint amount) external {
//       require(strategy.call(abi.encode(amount)));  // cross-call inside a require
//     }
//   }
// Regression fixture for the adversarial-verify finding: a blacklisted construct
// embedded inside a `require(...)` previously BYPASSED the fail-loud rejection set
// and silently degraded to Stmt::Raw (a FALSE ACCEPT). A synchronous
// cross-contract call (`.call(...)`) requires an account model or vProg
// composition; it is not UTXO-native. `portrait engrave` MUST reject this
// fail-loud, naming the `call` construct and routing it to the vProgs layer
// (SUBSET-V0 §3 item 3) — identically to the standalone form.
pragma portrait ^0.1.0;

app RequireCrossCallVault {
  role vault {
    param int balance;

    state { int balance; }

    #[covenant(mode = transition)]
    entrypoint function drain(int amount) : (int balance) {
      require strategy.call(amount);   // cross-call embedded in require — REJECT
      return balance - amount;
    }
  }

  lifecycle { live -> live via vault.drain; }
  invariant no_undeclared_state;
}
